@@ -1,3 +1,10 @@
+2005-02-17  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC1-cvs-b9
+
+	* Fix: stats.php was outputting an HTML comment before loading the embedded
+	  header.
+
+	* Fix: getIMVersion() was returning a full string instead of '5' or '6'
+
 2005-02-17  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC1-cvs-b8
 
 	* Change: Add a new config option for bypassing our register_globals-disabled
